--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <input type="number" id="marks">
         <button onclick="grades()">answer</button>
         <div id="result"></div>
-    <script src="studentGradeGenerator.js"></script>
+    <script src="Test1.js"></script>
 </body>
 </html>
