--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <button onclick="grades()">answer</button>
         <div id="result"></div>
     <script src="Test1.js"></script>
+    <script src="Test2.js"></script>
+    <script src="Test3.js"></script>
 </body>
 </html>
